# forge

./: .env.local.example  .gitignore  .vercelignore  CONTRIBUTING.md  DESIGN.md  LICENSE  Prompt.md  README.md  code.html  next.config.ts  package-lock.json  package.json  test-api.mjs  tsconfig.json
.github/workflows/: desktop-release.yml
app/: globals.css  home.css  layout.tsx  legal.css  not-found.css  not-found.tsx  page.tsx
app/admin/: admin.css  layout.tsx  page.tsx
app/changelog/: page.tsx
app/cli/: page.tsx
app/contact/: page.tsx
app/desktop/: page.tsx
app/pricing/: page.tsx
app/privacy/: page.tsx
app/research/: research.css
app/terms/: page.tsx
components/: ForgeBar.tsx  PreviewFrame.tsx  StitchPanel.tsx  ToolViewerClient.tsx  theme-toggle.tsx
components/admin/: AdminAuthProvider.tsx  AdminEditor.tsx
components/research/: ResearchClient.tsx
docs/: desktop-gemini-cli-backend.md
forge-code/: PLAYBOOK.md  README.md  bunfig.toml  package-lock.json  package.json  smart_router.py  tsconfig.json  write-md.js
forge-code/scripts/: build.ts  provider-bootstrap.ts  provider-launch.ts  provider-recommend.ts  system-check.ts
forge-code/src/: QueryEngine.ts  Task.ts  Tool.ts  commands.ts  (+17 more)
forge-desktop/: README.md  package.json
forge-desktop/src-tauri/: Cargo.toml  tauri.conf.json
forge-desktop/src-tauri/src/: lib.rs
lib/: ai-keys.ts  copilot-token.ts  firebase-admin.ts  firebase.ts  gemini-cli.ts  github.ts  research.ts  runtime-telemetry.ts  slugify.ts  system-prompt.ts  theme-context.tsx  vfs.ts
public/: flash-nav.js  forge.js
(+1950 files in other folders)
